Updated the game

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				background-size:cover;
 			}
 
-			.fps {
+			.score {
 				position:absolute;
 				margin:0px;
 				padding:0px;
@@ -32,6 +32,7 @@
 			}
 
 			.ball {
+				position: absolute;
 				background: #fff;
    				width: 20px;
 				height: 20px;
@@ -44,9 +45,16 @@
 				position:absolute;
 				margin:0px;
 				padding:0px;
-                background-image: url(bitcoin.png);
-				/* top: 150px;
-				left: 200px;		*/		
+                background-image: url(bitcoin.png);	
+				width:64px;
+				height:64px;
+			}
+
+			.euro {
+				position:absolute;
+				margin:0px;
+				padding:0px;
+                background-image: url(euro.png);	
 				width:64px;
 				height:64px;
 			}
@@ -59,8 +67,6 @@
 				width: 80px;
 				height: 80px;
 			}
-
-
         </style>
 	</head>
 
